klaviyo button css fixes on mobile

--- a/assets/collection-shop-by-brands.css
+++ b/assets/collection-shop-by-brands.css
@@ -54,6 +54,22 @@
     }
 }
 
+/* klaviyo button css here */
+.kl-teaser-Rr74yr{
+    width: 110px !important;
+}
+.kl-teaser-Rr74yr .go681896951.kl-private-reset-css-Xuajs1{
+    padding: 2px !important;
+    min-height: unset !important;
+}
+.kl-private-reset-css-Xuajs1.go3176171171 p span{
+    font-size: 14px !important;
+}
+
+.product-item__info .offer__badge{
+    border-radius: 0 !important;
+}
+
 /* slick slider css */
 
 .logo-slider-flex{
